myteo/test/analyze/name_resolution/traits/this_super_outside_method_error.myte
module test

// This cannot appear outside member functions
val x1: Int = this
val x2: Int = super

fun toplevelFunction() {
  this;
  super;
}

trait Trait1 {
  static fun foo() {
    this;
    super;
  }
}

// This can appear inside member functions for traits and types
trait Trait2 {
  fun foo() {
    this;
    super;
  }
}

type Type1 (Unit)
methods Type1 {
  fun foo() {
    this;
    super;
  }
}

fun main() {}